clean some stuff up

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
 	<script src="javascripts/searchfilter.jquery.js"></script>
 
 	<script>
-	$(document).ready(function(){
-		  $('.container').searchfilter({
-		  	'item' : '.item',
-				'input' : '#searchInput',
-				'searchBtn' : '#search-btn',
-				'searchItem' : '.item-name'
-		  });
+	// $(document).ready(function(){
+	// 	  $('.container').searchfilter({
+	// 	  		'item' : '.item',
+	// 			'input' : '#searchInput',
+	// 			'searchBtn' : '#search-btn',
+	// 			'searchItem' : '.item-name'
+	// 	  });
 
-	})
+	// })
 
 	</script>
 	
