--- a/index.html
+++ b/index.html
@@ -21,49 +21,57 @@
 <div class='container'>
 
 
-<h1>Search Names</h1>
+<h1>Search Seinfeld Characters</h1>
 <div class="ui-widget"><br>
-  <label for="searchInput">Search Name: </label><br>
-  <input id="searchInput">
-  <button id="search-btn">Search</button>
+  Search: <input id="searchInput">
 </div>
 
 <br>
 
 	<div class='item'>
 		<img src="img/dvn.jpg">
-	  <p class='item-name'>Dr. Van Nostrand</p>
-	  <p class='job'>Doctor</p>
+	  	<p class='item-name'>Dr. Van Nostrand</p>
+	  	<p>Title: <span class='item-name'>Julliard-trained Dermatologist</span></p>
+	  	<hr>
+	  	<p>Tags: <span class='tags'>Dr, Doc, Healthcare, Health care, Hospital</span></p>
 	</div>
 
 	<div class='item'>
 		<img src="img/av.jpg">
-	  <p class='item-name'>Art Vandelay</p>
-	  <p class='job'>Architect</p>
+	  	<p class='item-name'>Art Vandelay</p>
+	  	<p>Title: <span class='item-name job'>Architect</span></p>
+	  	<hr>
+	  	<p>Tags: <span class='tags'>Architecture, buildings, houses</span></p>
 	</div>
 
 	<div class='item'>
 		<img src="img/agp.jpg">
-	  <p class='item-name'>A.G. Penny Packer</p>
-	  <p class='job'>Wealthy Industrialist</p>
+	  	<p class='item-name'>A.G. Penny Packer</p>
+	  	<p>Title: <span class='job'>Wealthy American Industrialist</span></p>
+	  	<hr>
+	  	<p>Tags<span class='tags'>Industry titon, silver mining, mining, Mayan culture, pricing guns</span></p>
 	</div>
 
 	<div class='item'>
 		<img src="img/paloma.jpg">
-	  <p class='item-name'>Paloma</p>
-	  <p class='job'>Nurse</p>
+	  	<p class='item-name'>Paloma</p>
+	  	<p>Title: <span class='job item-name'>Nurse</span></p>
+	  	<hr>
 	</div>
 
 	<div class='item'>
 		<img src="img/kv.jpg">
 	  <p class='item-name'>Kel Varnsen</p>
-	  <p class='job'>?</p>
+	  <p>Title: <span class='job'>?</span></p>
+	  <hr>
 	</div>
 
 	<div class='item'>
 		<img src="img/bn.jpg">
 	  <p class='item-name'>Buck Naked</p>
 	  <p class='job'>Porn Star</p>
+	  <hr>
+
 	</div>
 
 </div>
