got tag filter working

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 	<div class='item'>
 		<img src="img/dvn.jpg">
 	  	<p class='item-name'>Dr. Van Nostrand</p>
-	  	<p>Title: <span class='item-name'>Julliard-trained Dermatologist</span></p>
+	  	<p class='item-name'>Julliard-trained Dermatologist</p>
 	  	<hr>
-	  	<p>Tags: <span class='tags'>Dr, Doc, Healthcare, Health care, Hospital</span></p>
+	  	<p class='item-list'>Dr, Doc, Healthcare, Health care, Hospital</p>
 	</div>
 
 	<div class='item'>
@@ -41,7 +41,7 @@
 	  	<p class='item-name'>Art Vandelay</p>
 	  	<p>Title: <span class='item-name job'>Architect</span></p>
 	  	<hr>
-	  	<p>Tags: <span class='tags'>Architecture, buildings, houses</span></p>
+	  	<p class='item-list'>Architecture, buildings, houses</p>
 	</div>
 
 	<div class='item'>
@@ -49,7 +49,7 @@
 	  	<p class='item-name'>A.G. Penny Packer</p>
 	  	<p>Title: <span class='job'>Wealthy American Industrialist</span></p>
 	  	<hr>
-	  	<p>Tags<span class='tags'>Industry titon, silver mining, mining, Mayan culture, pricing guns</span></p>
+	  	<p class='item-list'>Industry titon, silver mining, mining, Mayan culture, pricing guns</p>
 	</div>
 
 	<div class='item'>
