--- a/index.html
+++ b/index.html
@@ -31,15 +31,9 @@
 	<div class='item'>
 		<img src="img/dvn.jpg">
 	  	<p class='search-item searchable'>Dr. Van Nostrand</p>
-	  	<p class='search-item searchable'>Julliard-trained Dermatologist</p>
 	  	<hr>
-	  	<p class='search-item searchable'>Dr, Doc, Healthcare, Health care, Hospital</p>
-	  	<div class='full-bio create-search-items searchable' style='display:none'>
-		  	Cosmo Kramer, usually referred to as simply "Kramer", is a fictional character on the American television sitcom Seinfeld (1989–1998), played by Michael Richards.
-
-			The character is loosely based on comedian Kenny Kramer, Larry David's former neighbor across the hall. Kramer is the friend and neighbor of main character Jerry Seinfeld, residing in Apartment 5B, and is friends with George Costanza and Elaine Benes. Of the series' four central characters, only Kramer has no visible means of support; what few jobs he holds seem to be nothing more than larks.
-
-			His trademarks include his upright hairstyle and vintage wardrobe, the combination of which led to his categorization as a "hipster doofus"; his taste in fresh fruit; his love of occasional smoking, Cuban cigars in particular; his bursts through Jerry's apartment door; frequent pratfalls and his penchant for nonsensical, percussive outbursts of noise to indicate skepticism, agreement, annoyance, and a variety of other responses. He has been described as "an extraordinary cross between Eraserhead and Herman Munster".[1] Kramer appeared in all but two episodes: "The Chinese Restaurant" and "The Pen", in the second and third seasons, respectively.
+	  	<div class='full-bio create-search-items searchable'>
+		  	Dr. Van Nostrand is a Julliard-trained Dermatologist, living in NYC.
 	  	</div>
 	
 	</div>
@@ -47,17 +41,18 @@
 	<div class='item'>
 		<img src="img/av.jpg">
 	  	<p class='search-item searchable'>Art Vandelay</p>
-	  	<p>Title: <span class='search-item searchable'>Architect</span></p>
 	  	<hr>
-	  	<p class='search-item searchable'>Architecture, buildings, houses</p>
+	  	<div class='full-bio create-search-items searchable'>
+ 			Art Vandelay is known for having many professions, including Architect, marine biologist, importer-exporter, author of "Venetian Blinds", and a manufacturer of latex.
+	  	</div>
 	</div>
 
 	<div class='item'>
 		<img src="img/agp.jpg">
 	  	<p class='search-item searchable'>A.G. Penny Packer</p>
-	  	<p>Title: <span class='search-item searchable'>Wealthy American Industrialist</span></p>
+	  	
 	  	<hr>
-	  	<p class='search-item searchable'>Industry titon, silver mining, mining, Mayan culture, pricing guns</p>
+	  	<div class='full-bio create-search-items searchable'>A.G. Penny Packer is a Wealthy American Industrialist Industry with interests in the silver mining industry.</div>
 	</div>
 
 	<div class='item'>
@@ -95,10 +90,7 @@
 
 
 	$(document).ready(function(){
-		  $('.container').BL_Searchable({
-
-		  });
-
+		$('.container').BL_Searchable({});
 	})
 
 	</script>
