add counting and isotope

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 
 <h1>Search Seinfeld Characters</h1>
+<p>Matching Characters: <span class='match_count'></span> matches</p>
 <!-- <div class="ui-widget"><br>
   Search: <input id="searchInput">
 </div> -->
