--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div class='container'>
 
 
-<h1>Search Seinfeld Characters</h1>
-<p>Matching Characters: <span class='match_count'></span> matches</p>
+<h1>Search Stuff</h1>(e.g. animals, fail)
+<p>Showing <span class='match_count'></span>  things</p>
 <!-- <div class="ui-widget"><br>
   Search: <input id="searchInput">
 </div> -->
@@ -40,54 +40,119 @@
 
 	<div class='item-container'>
 
+
 		<div class='item'>
-			<img src="img/dvn.jpg">
-		  	<p class='search-item searchable'>Dr. Van Nostrand</p>
+			<img src="img/drunkcat.gif">
+		  	<p class='search-item searchable'>Drunk Cat</p>
 		  	<hr>
-		  	<div class='full-bio create-search-items searchable'>
-			  	Dr. Van Nostrand is a Julliard-trained Dermatologist, living in NYC.
-		  	</div>
-		
+		  	<div class='description create-search-items searchable'>
+			  	Animals, cat, drunk, bee, costume
+		  	</div>		
 		</div>
 
+
+
+
 		<div class='item'>
-			<img src="img/av.jpg">
-		  	<p class='search-item searchable'>Art Vandelay</p>
+			<img src="img/treadmill.gif">
+		  	<p class='search-item searchable'>Treadmill Dance</p>
 		  	<hr>
-		  	<div class='full-bio create-search-items searchable'>
-	 			Art Vandelay is known for having many professions, including Architect, marine biologist, importer-exporter, author of "Venetian Blinds", and a manufacturer of latex.
-		  	</div>
+		  	<div class='description create-search-items searchable'>
+			  	People, treadmill, dance, fail
+		  	</div>		
 		</div>
 
+
+
+
 		<div class='item'>
-			<img src="img/agp.jpg">
-		  	<p class='search-item searchable'>A.G. Penny Packer</p>
-		  	
+			<img src="img/dogfail.gif">
+		  	<p class='search-item searchable'>Dog Fail</p>
 		  	<hr>
-		  	<div class='full-bio create-search-items searchable'>A.G. Penny Packer is a Wealthy American Industrialist Industry with interests in the silver mining industry.</div>
+		  	<div class='description create-search-items searchable'>
+			  	Animals, dog, dogs, bushes, fail
+		  	</div>		
 		</div>
 
+
 		<div class='item'>
-			<img src="img/paloma.jpg">
-		  	<p class='search-item searchable'>Paloma</p>
-		  	<p>Title: <span class='search-item searchable'>Nurse</span></p>
+			<img src="img/bucket.gif">
+		  	<p class='search-item searchable'>Bucket Head</p>
 		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	People, car hopping, buckets, idiot
+		  	</div>		
+		</div>
+
+
+		<div class='item'>
+			<img src="img/guitarkarate.gif">
+		  	<p class='search-item searchable'>Guitar Karate</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	People, guitar, karate, cinder blocks, fire
+		  	</div>		
 		</div>
 
 		<div class='item'>
-			<img src="img/kv.jpg">
-		  <p class='search-item searchable'>Kel Varnsen</p>
-		  <p>Title: <span class='search-item searchable'>?</span></p>
-		  <hr>
+			<img src="img/cat_jump.gif">
+		  	<p class='search-item searchable'>Cat Jump</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	Animals, cat, fail, jumping
+		  	</div>		
 		</div>
 
 		<div class='item'>
-			<img src="img/bn.jpg">
-		  <p class='search-item searchable'>Buck Naked</p>
-		  <p class='search-item searchable'>Porn Star</p>
-		  <hr>
-
+			<img src="img/jackie_dog.gif">
+		  	<p class='search-item searchable'>Jackie Dog</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	Animals, dog, jackie chan
+		  	</div>		
 		</div>
+
+
+		<div class='item'>
+			<img src="img/bball.gif">
+		  	<p class='search-item searchable'>Crazy Arms</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	People, basketball
+		  	</div>		
+		</div>
+
+		<div class='item'>
+			<img src="img/dog_slide.gif">
+		  	<p class='search-item searchable'>Dog Slide</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	Animals, dog, slide, sliding, bathroom, floor, baseball
+		  	</div>		
+		</div>
+
+
+
+
+
+		<div class='item'>
+			<img src="img/gymnastics.gif">
+		  	<p class='search-item searchable'>Toilet Gymnastics</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	People, gymnastics, bathroom, toilet
+		  	</div>		
+		</div>
+
+		<div class='item'>
+			<img src="img/trip.gif">
+		  	<p class='search-item searchable'>Accident?</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	People, subway, confrontation, trip
+		  	</div>		
+		</div>
+
 
 
 	</div> <!-- //item container -->
