swap static images for gifs

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 
 <div class='container'>
+<h1>IsotopeSearchFilter.js</h1>
+<h2>Search Stuff</h2>(e.g. chicken, dog, flower)
 
-<h1>Search Stuff</h1>(e.g. animals, fail)
-
-<input type="text" id="search-term" />
+<input placeholder='Give me a try' type="text" id="search-term" />
 
 
 <hr>
@@ -33,11 +33,11 @@
 	<div class='item-container'>
 
 		<div class='item' data-filters='animals'>
-			<img src="img/drunkcat.gif">
-		  	<p class='search-item searchable'>Drunk Cat</p>
+			<img src="img/one.jpeg">
+		  	<p class='search-item searchable'>Mommy Chicken</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	Animals, cat, drunk, bee, costume
+			  	chicken, dogs, basket
 		  	</div>		
 		</div>
 
@@ -45,113 +45,75 @@
 
 
 		<div class='item' data-filters='people fail'>
-			<img src="img/treadmill.gif">
-		  	<p class='search-item searchable'>Treadmill Dance</p>
+			<img src="img/two.jpeg">
+		  	<p class='search-item searchable'>Dog Swinger</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	People, treadmill, dance, fail
+			  	Dog, swing, park
 		  	</div>		
 		</div>
 
 		<div class='item' data-filters='animals people'>
-			<img src="img/catfive.gif">
-		  	<p class='search-item searchable'>Cat Five</p>
+			<img src="img/three.jpg">
+		  	<p class='search-item searchable'>Horsey Ride</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	People, animals, high five
+			  	Horse, pug
 		  	</div>		
 		</div>
 
 
 
 		<div class='item' data-filters='animals fail'>
-			<img src="img/dogfail.gif">
-		  	<p class='search-item searchable'>Dog Fail</p>
+			<img src="img/four.jpg">
+		  	<p class='search-item searchable'>Cool Chicken</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	Animals, dog, dogs, bushes, fail
+			  	Chicken, jacket
 		  	</div>		
 		</div>
 
 
 		<div class='item' data-filters='people'>
-			<img src="img/bucket.gif">
-		  	<p class='search-item searchable'>Bucket Head</p>
+			<img src="img/five.jpg">
+		  	<p class='search-item searchable'>Melon Head</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	People, car hopping, buckets, idiot
+			  	Cat, melon
 		  	</div>		
 		</div>
 
 
-		<div class='item' data-filters='people'>
-			<img src="img/guitarkarate.gif">
-		  	<p class='search-item searchable'>Guitar Karate</p>
-		  	<hr>
-		  	<div class='description create-search-items searchable'>
-			  	People, guitar, karate, cinder blocks, fire
-		  	</div>		
-		</div>
 
 		<div class='item' data-filters='animals fail'>
-			<img src="img/cat_jump.gif">
-		  	<p class='search-item searchable'>Cat Jump</p>
+			<img src="img/six.jpg">
+		  	<p class='search-item searchable'>Drunk Cat</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	Animals, cat, fail, jumping
+			  	Cat, couch potato, bud light
 		  	</div>		
 		</div>
 
 		<div class='item' data-filters='animals'>
-			<img src="img/jackie_dog.gif">
-		  	<p class='search-item searchable'>Jackie Dog</p>
+			<img src="img/seven.jpg">
+		  	<p class='search-item searchable'>Cool Hair</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	Animals, dog, jackie chan
+			  	Dog, rug
 		  	</div>		
 		</div>
 
 
 		<div class='item' data-filters='people'>
-			<img src="img/bball.gif">
-		  	<p class='search-item searchable'>Crazy Arms</p>
+			<img src="img/eight.png">
+		  	<p class='search-item searchable'>Flower Dog</p>
 		  	<hr>
 		  	<div class='description create-search-items searchable'>
-			  	People, basketball
+			  	Dog, Flower
 		  	</div>		
 		</div>
 
-		<div class='item' data-filters='animals'>
-			<img src="img/dog_slide.gif">
-		  	<p class='search-item searchable'>Dog Slide</p>
-		  	<hr>
-		  	<div class='description create-search-items searchable'>
-			  	Animals, dog, slide, sliding, bathroom, floor, baseball
-		  	</div>		
-		</div>
-
-
-
-
-
-		<div class='item fail'>
-			<img src="img/gymnastics.gif">
-		  	<p class='search-item searchable'>Toilet Gymnastics</p>
-		  	<hr>
-		  	<div class='description create-search-items searchable'>
-			  	People, gymnastics, bathroom, toilet
-		  	</div>		
-		</div>
-
-		<div class='item'>
-			<img src="img/trip.gif">
-		  	<p class='search-item searchable'>Accident?</p>
-		  	<hr>
-		  	<div class='description create-search-items searchable'>
-			  	People, subway, confrontation, trip
-		  	</div>		
-		</div>
-
+	
 
 
 	</div> <!-- //item container -->
