--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<title>Isotope Search and Filter jQuery Plugin Demo</title>
 
 	
-	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 	
 
@@ -22,7 +21,8 @@
 
 
 <div class='container'>
-<h1>IsotopeSearchFilter.js</h1>
+<h1>isotopeSearchFilter.js, a jQuery Plugin</h1>
+<h3>Get the code <a href="https://github.com/benrlodge/isotopeSearchFilter">on Github</a></h3>
 <h2>Search Stuff</h2>(e.g. chicken, dog, flower)
 
 <input placeholder='Give me a try' type="text" id="search-term" />
