--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Isotope Search and Filter jQuery Plugin Demo</title>
 
-	
+	<link rel="stylesheet" href="http://www.benrlodge.com/assets/application-87e1a5e14c6a339e9a059b54dc092ffc.css">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 	
 
