--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
 
 	<script src="javascripts/vendor/custom.modernizr.js"></script>
 
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "35f07b4c-c7b4-4676-b1b5-1c1495216bff", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+
 </head>
 <body>
-
-
 
 
 <div class='container'>
 <h1>isotopeSearchFilter.js, a jQuery Plugin</h1>
 <h3>Get the code <a href="https://github.com/benrlodge/isotopeSearchFilter">on Github</a></h3>
+    <p>
+        <span class='st_sharethis' displayText='ShareThis'></span>
+        <span class='st_facebook' displayText='Facebook'></span>
+        <span class='st_twitter' displayText='Tweet'></span>
+        <span class='st_linkedin' displayText='LinkedIn'></span>
+        <span class='st_pinterest' displayText='Pinterest'></span>
+        <span class='st_email' displayText='Email'></span>
+    </p>
+
 <h2>Search Stuff</h2>(e.g. chicken, dog, flower)
 
 <input placeholder='Give me a try' type="text" id="search-term" />
