--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
 
 
 
+		<div class='item' data-filters='people'>
+			<img src="img/unicorn.jpeg">
+		  	<p class='search-item searchable'>Unicorn Bike</p>
+		  	<hr>
+		  	<div class='description create-search-items searchable'>
+			  	Unicorn, bike, bicycle, haters gonna hate
+		  	</div>		
+		</div>
+
+
 		<div class='item' data-filters='animals fail'>
 			<img src="img/six.jpg">
 		  	<p class='search-item searchable'>Drunk Cat</p>
